# MiniCCompiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  SUNUM.md  ast.dot  devenv.nix  run.sh  src.mc
include/: ast.h  codegen.h  codegen_context.h
outputs/: test1.out  test2  test2.ll  test2.out  test2.s  test3  test3.ll  test3.out  test3.s  test4.out  test5  test5.ll  test5.out  test5.s  test5_pure
src/: ast_codegen.cpp  codegen.cpp  lexer.l  lexer_main.cpp  minic_codegen.cpp  minicpl.lex  parser.y
test/: test1.mc  test2.mc  test3.mc  test4.mc
tests/: invalid_1.mc  invalid_2.mc  invalid_3.mc  invalid_4.mc  invalid_5.mc  test1.mc  test10.mc  test2.mc  test3.mc  test4.mc  test5.mc  test6.mc  test7.mc  test8.mc  test9.mc  test_parser.c  verify.sh
tests/scripts/: compile.sh  verify.sh  verify_codegen.sh
